--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -42,6 +42,10 @@ body {
   font-weight: normal;
   margin: 0;
   word-wrap: break-word;
+  height: 100%;
+  background-color: #cc5500;
+  background-image: repeating-linear-gradient(45deg, transparent, transparent 35px, rgba(255, 255, 255, 0.2) 35px, rgba(255, 255, 255, 0.2) 70px), repeating-linear-gradient(-45deg, transparent, transparent 35px, rgba(255,255,255,0.4) 35px, rgba(255,255,255,0.4) 70px);
+  background-attachment: fixed;
 }
 a {
   background-color: transparent;
@@ -76,6 +80,7 @@ h1 {
   padding: 0;
   line-height: var(--line-height-dense);
   letter-spacing: -0.01em;
+  font-size: var(--font-lg);
 }
 h1 > b {
   color: var(--color-primary);
@@ -124,7 +129,6 @@ dd,
 p {
   margin: 0;
   padding: 0;
-  margin-bottom: var(--space-4);
 }
 ul,
 ol {
