--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -43,7 +43,7 @@ body {
   margin: 0;
   word-wrap: break-word;
   height: 100%;
-  background-color: #cc5500;
+  background-color: #cc5500 !important;
   background-image: repeating-linear-gradient(45deg, transparent, transparent 35px, rgba(255, 255, 255, 0.2) 35px, rgba(255, 255, 255, 0.2) 70px), repeating-linear-gradient(-45deg, transparent, transparent 35px, rgba(255,255,255,0.4) 35px, rgba(255,255,255,0.4) 70px);
   background-attachment: fixed;
 }
